<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment3">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/backdrop_tool"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/instaAccent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="Progress"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:fontFamily="@font/rubik_medium"
                android:gravity="center_horizontal"
                android:text="@string/calc_bmi"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/dark_black" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/weight"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/dark_black" />

                <EditText
                    android:id="@+id/edit_kg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/kg"
                    android:importantForAutofill="no"
                    android:inputType="number|numberDecimal"
                    android:textColor="@color/black"
                    android:textColorHint="@color/txt_light_color"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/btn_kg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rect_layout_border"
                    android:fontFamily="@font/rubik_regular"
                    android:padding="5dp"
                    android:text="@string/kg"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/txt_light_color" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/height"

                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/dark_black" />


                <EditText
                    android:id="@+id/edit_cm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/cm"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/txt_light_color"
                    tools:ignore="UnusedAttribute" />


                <TextView
                    android:id="@+id/btn_cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/rect_layout_border"
                    android:fontFamily="@font/rubik_regular"
                    android:padding="5dp"
                    android:text="@string/cm"

                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/txt_light_color" />


            </LinearLayout>

            <Button
                android:id="@+id/btn_bmi"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/calc"

                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:fontFamily="@font/rubik_regular"
        android:textAlignment="center"
        android:text="Your BMI:"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/dark_black" />


    <EditText
        android:id="@+id/edit_text_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:hint="Add date" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_above="@id/button_upload"
        android:layout_below="@id/edit_text_file_name"
        android:layout_marginTop="16dp"
        android:background="#FFE0E0E0" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/rubik_regular"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="140dp"
        android:text="Upload" />

    <Button
        android:id="@+id/text_view_show_uploads"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:layout_marginLeft="140dp"
        android:text="Show "
        android:textSize="16sp" />


</LinearLayout>